--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
         <h1>Translate</h1>
         <section id="translator__language">
             <div id="firstLang" id="engToMorse" class="language">English</div>
-            <div id="swap"><span id="swap" class="iconify" data-icon="ic:round-swap-horizontal-circle" data-inline="false"></span>
-                </div>
+            <button id="swap"><span class="iconify" data-icon="ic:round-swap-horizontal-circle" data-inline="false"></span></button>
             <div id="secondLang" id="morseToEng" class="language">Morse code</div>
         </section>
 
         <div id="input-output">
-            <input type="text" id="input" maxlength="30"></input>
+            <input type="text" id="input" maxlength="40"></input>
             <div id="output">
                 <p id="output__text"></p>
             
             </div>
+            <button id="sound" class="sound_left sounds"><span class="iconify" data-icon="subway:sound-1" data-inline="false"></span></button>
+            <button id="sound__morse" class="sound_right sounds"><span class="iconify" data-icon="subway:sound-1" data-inline="false"></span></button>
         </div>
+        
 
         <div id="buttons">
             <button id="translate__button" class="btn">TRANSLATE</button>
@@ -41,3 +43,7 @@
     <svg id="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 330"><path fill="#BC9082" fill-opacity="1" d="M0,320L60,288C120,256,240,192,360,160C480,128,600,128,720,106.7C840,85,960,43,1080,21.3C1200,0,1320,0,1380,0L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 </body>
 </html>
+
+
+
+// text to speach / audio, convert stranslator.js into npm module and upload to npm.js, set up github actions ,wxfr - tool for audio
